<resources>
    <string name="app_name">Scino_Books</string>

    <string name="hello">Выберите действие:</string>
    <string name="button1">Добавить книгу</string>
    <string name="button2">Создать список книг</string>
    <string name="button3">Списки существующих книг</string>
    <string name="button4">Список книг "Без категории"</string>

    <string name="book_title">Создать новую книгу</string>
    <string name="book_message_name">Введите название книги</string>
    <string name="book_message_author">Введите автора</string>
    <string name="book_message_title">Введите имя списка книг</string>
    <string name="category_title">Создать новый список книг</string>
    <string name="category_message">Введите имя списка</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="delete_record">Удалить запись</string>
    <string name="title_activity_main22">Main22Activity</string>

    <string name="hello_world">Hello world!</string>


</resources>
