<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/book_message_name"
        android:id="@+id/input_name">
        <requestFocus />
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/book_message_author"
        android:id="@+id/input_author">
        <requestFocus />
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/book_message_title"
        android:id="@+id/input_title">
        <requestFocus />
    </EditText>

</LinearLayout>